add: update todo don't forget to use express.json before routes and other middleware after registring routes
