# backend/build/swagger.json
@@ -62,6 +62,27 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"UpdateTodoValidator": {
+				"properties": {
+					"Title": {
+						"type": "string"
+					},
+					"Description": {
+						"type": "string"
+					},
+					"Urgency": {
+						"type": "string"
+					},
+					"DueDate": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"Urgency"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -123,6 +144,42 @@
 						}
 					}
 				]
+			},
+			"patch": {
+				"operationId": "UpdateTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Todo"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "TodoId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateTodoValidator"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/todo": {
